# club-aviazione-popolare

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .sops.yaml  AGENTS.md  CONTEXT.md  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  summary.md  tailwind.config.ts
cms/utils/wordpress/: README.md  ai-models.yaml  ai.py  cache.py  clean.py  create_manifest_executor.py  directus.py  directus_create_only.py  directus_policy_collector.py  directus_policy_evidence.py  fix_author.py  gallery_media_token_recovery.py  main.py  parser.py  parser.yaml  pre_create_gates.py  pyproject.toml  wordpress.py
cms/utils/wordpress/import/: attivita.csv  attivita.json  attivita.xml  raduni.db  raduni.json  raduni.xml
cms/utils/wordpress/inventory/: __init__.py  __main__.py  canonical.py  directus.py  errors.py  gallery.py  gallery_discovery.py  gallery_html.py  gallery_models.py  http.py  jsonl.py  manifest.py  member_schema_plan.py  models.py  pagination.py  permission_gate.py  readonly_http.py  reconciliation.py  reconciliation_writer.py  records.py  routes.py  sql_export.py  transport.py  wordpress.py  wordpress_client.py  wordpress_records.py  write_manifest.py  writer.py  wxr.py
cms/utils/wordpress/tests/: test_canonical.py  test_create_manifest_executor.py  test_directus_create_only.py  test_directus_inventory.py  test_directus_policy_collector.py  test_directus_policy_evidence.py  test_directus_policy_normalization.py  test_gallery_inventory.py  test_gallery_media_token_recovery.py  (+17 more)
(+188 files in other folders)
